--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,11 @@
     "type": "git",
     "url": "git://github.com/ArtOfContext/angular-xhr-src.git"
   },
+  "main": "angular-xhr-src.js",
   "dependencies": {
     "angular": "*"
-  }
+  },
+  "ignore": [
+    ".jshintrc"
+  ]
 }
